# b-numerology

./: LICENSE  README.md  pyproject.toml
src/: main.py
src/alembic/: env.py
src/alembic/versions/: c77b42ed720f_add_index_in_maps_tabel.py  e7c46165cb6e_change_type_of_bdate.py  f135fe481961_add_index_in_maps_tabel_change_folder_.py  fc550b2d3be6_create_initial_table.py  ffea71b8ad43_add_new_column.py
src/i18n/: en.json  provider.py  pt.json  validation_messages.py
src/modules/controller/: controller.ts
src/modules/db/: __init__.py  base.py  conection.py  models.py  repository.py
src/modules/dto/: dto.py
src/modules/routes/: routes.py
src/modules/schema/: schema.py
src/modules/service/: generate_map.py
